@@ -1,3 +1,9 @@
+2009-08-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* tools/{tiffcrop.c,tiffgt.c}: Applied patch from Oden Eriksson to
+	fix build with gcc when using the "-Wformat
+	-Werror=format-security" flags.
+
 2009-08-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* test/{bmp2tiff_palette.sh, bmp2tiff_rgb.sh, gif2tiff.sh,
